--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appmagazine",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -23,6 +23,7 @@
     "@ionic-native/calendar": "^4.5.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/date-picker": "^4.5.3",
+    "@ionic-native/file-opener": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
@@ -30,6 +31,7 @@
     "cordova-plugin-calendar": "^5.0.0",
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -53,10 +55,9 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-calendar": {},
-      "cordova-plugin-datepicker": {}
+      "cordova-plugin-datepicker": {},
+      "cordova-plugin-file-opener2": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
