--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/date-picker": "^4.5.3",
     "@ionic-native/document-viewer": "^4.6.0",
     "@ionic-native/file-opener": "^4.6.0",
+    "@ionic-native/file-path": "^4.6.0",
     "@ionic-native/file-picker": "^4.6.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -35,6 +36,7 @@
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-document-viewer": "^0.9.9",
     "cordova-plugin-file-opener2": "^2.0.19",
+    "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-filepicker": "^1.1.4",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -62,7 +64,8 @@
       "cordova-plugin-datepicker": {},
       "cordova-plugin-file-opener2": {},
       "cordova-plugin-document-viewer": {},
-      "cordova-plugin-filepicker": {}
+      "cordova-plugin-filepicker": {},
+      "cordova-plugin-filepath": {}
     },
     "platforms": []
   }
