--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "4.4.0",
     "@ionic-native/date-picker": "^4.5.3",
     "@ionic-native/document-viewer": "^4.6.0",
+    "@ionic-native/file": "^4.6.0",
     "@ionic-native/file-opener": "^4.6.0",
     "@ionic-native/file-path": "^4.6.0",
     "@ionic-native/file-picker": "^4.6.0",
@@ -35,6 +36,7 @@
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-document-viewer": "^0.9.9",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-filepicker": "^1.1.4",
@@ -65,7 +67,8 @@
       "cordova-plugin-file-opener2": {},
       "cordova-plugin-document-viewer": {},
       "cordova-plugin-filepicker": {},
-      "cordova-plugin-filepath": {}
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-file": {}
     },
     "platforms": []
   }
