Se modifica los elementos dentro de login.html y se modifica el metodo iniciarSesion y se crea un nuevo metodo para mostrar alertas en pantalla.

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "appmagazine",
-  "app_id": "",
+  "app_id": "863d793b",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
