--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "@ionic-native/file-path": "^4.6.0",
     "@ionic-native/file-picker": "^4.6.0",
     "@ionic-native/splash-screen": "4.4.0",
+    "@ionic-native/sqlite": "^4.6.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^7.0.0",
     "cordova-plugin-calendar": "^5.0.0",
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^2.0.1",
@@ -41,9 +42,10 @@
     "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-filepicker": "^1.1.4",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.3.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -68,8 +70,11 @@
       "cordova-plugin-document-viewer": {},
       "cordova-plugin-filepicker": {},
       "cordova-plugin-filepath": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-sqlite-storage": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
